# truthsayer

./: .gitignore  LICENSE  README.md  pyproject.toml
truthsayer/: __main__.py  cli.py  constants.py  formatting.py  sections.py
